About and help page changed

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -12,7 +12,8 @@
 <body>
     <div class="main-content">
         {{>header}}
-        <p>This is about {{name}}</p>
+        <p>This is the weather app. This uses 2 API's in the backend.<br>This gets weather data from openweathermap and
+            location data from mapbox</p>
     </div>
     {{>footer}}
 </body>
